fix(typo): Fix typo in package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node=natural-mouse",
+  "name": "node-natural-mouse",
   "version": "1.0.0",
   "description": "Node.js module for natural mouse motion",
   "main": "index.js",
