--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
   "name": "node-natural-mouse",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node.js module for natural mouse motion",
-  "main": "index.js",
+  "homepage": "https://github.com/veemex/node-natural-mouse",
+  "author": "Trofin Cosmin Mihai",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/veemex/node-natural-mouse.git"},
+  "main": "lib/index.js",
   "gypfile": true,
   "scripts": {
     "build": "node-gyp rebuild"
-  }
+  },
+  "files": [
+    "binding.gyp",
+    "src/*.[ch]pp",
+    "include/*.[ch]pp",
+    "lib/**"
+  ],
+  "license": "MIT",
+  "keywords": [
+    "mouse",
+    "robot",
+    "automatic",
+    "natural"
+  ]
 }
